<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">Chase Game</string>
    <string name="user_name">User name :</string>
    <string name="password">Password :</string>
    <string name="button_login_text">Log in</string>
    <string name="new_account_button">Create account</string>
    <string name="map_button">Map</string>
    <string name="create_game_button">New Game</string>
     <string name="stop_game_button">End game</string>
    <string name="about_button">About</string>
    <string name="exit_button">Exit</string>
    <string name="about_text"><i>Lorem Ipsum er rett og</i> slett dummytekst fra og for trykkeindustrien. 
	    Lorem Ipsum har vært bransjens standard for dummytekst helt siden 1500-tallet, 
	    da en ukjent boktrykker stokket en mengde bokstaver for å lage et prøveeksemplar av en bok. 
	    Lorem Ipsum har tålt tidens tann usedvanlig godt, og har i tillegg til å bestå gjennom fem århundrer 
	    også tålt spranget over til elektronisk typografi uten vesentlige endringer. 
	    Lorem Ipsum ble gjort allment kjent i 1960-årene ved lanseringen av Letraset-ark med 
	    avsnitt fra Lorem Ipsum, og senere med sideombrekkingsprogrammet Aldus PageMaker som tok 
	    i bruk nettopp Lorem Ipsum for dummytekst.</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="create_new_game">Create New Game</string>
    <string name="title_activity_join_game">JoinGameActivity</string>
    <string name="title_activity_location_receiver">LocationReceiver</string>
    <string name="title_activity_debug">DebugActivity</string>

</resources>