<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        
    <Button
           android:layout_marginTop="20dip"
           android:id="@+id/create_game_button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/create_game_button" />
	<Button
           android:id="@+id/map_button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/map_button" />
	<Button
           android:id="@+id/about_button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/about_button" />
	<Button
           android:id="@+id/exit_button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/exit_button" />

</LinearLayout>